# STL-Projects

./: README.md
p01_01/: CMakeLists.txt  main.cpp
p01_02/: CMakeLists.txt  main.cpp
p01_03/: CMakeLists.txt  main.cpp  tstack1.cpp
p01_04/: CMakeLists.txt  main.cpp  tstack1.cpp  tstack1.h
p01_05/: CMakeLists.txt  main.cpp
p01_06/: CMakeLists.txt  main.cpp
p01_07/: CMakeLists.txt  main.cpp
p01_08/: CMakeLists.txt  main.cpp
p02_01/: CMakeLists.txt  main.cpp
p02_02/: CMakeLists.txt  main.cpp
p02_03/: CMakeLists.txt  main.cpp
p02_04/: CMakeLists.txt  main.cpp
p02_05/: CMakeLists.txt  main.cpp
p02_06/: CMakeLists.txt  main.cpp
p02_07/: CMakeLists.txt  main.cpp
p02_08/: CMakeLists.txt  main.cpp
p02_09/: CMakeLists.txt  main.cpp
p02_10/: CMakeLists.txt  main.cpp
p02_11/: CMakeLists.txt  main.cpp
p03_01/: CMakeLists.txt  main.cpp
p03_02/: CMakeLists.txt  main.cpp
p03_03/: CMakeLists.txt  main.cpp
p03_04/: CMakeLists.txt  main.cpp
p03_05/: CMakeLists.txt  main.cpp
p03_06/: CMakeLists.txt  main.cpp
p03_07/: CMakeLists.txt  main.cpp
p03_08/: CMakeLists.txt  main.cpp
p03_09/: CMakeLists.txt  main.cpp
p04_01/: CMakeLists.txt  main.cpp
p04_02/: CMakeLists.txt  main.cpp
p04_03/: CMakeLists.txt  main.cpp
p04_04/: CMakeLists.txt  main.cpp
p04_05/: CMakeLists.txt  main.cpp
p04_06/: CMakeLists.txt  main.cpp
p04_07/: CMakeLists.txt  main.cpp
p05_01/: CMakeLists.txt  main.cpp
p05_02/: CMakeLists.txt  main.cpp
p05_03/: CMakeLists.txt  main.cpp
p05_04/: CMakeLists.txt  main.cpp
p05_05/: CMakeLists.txt  main.cpp
p05_06/: CMakeLists.txt  main.cpp
p05_07/: CMakeLists.txt  main.cpp
p05_08/: CMakeLists.txt  main.cpp
p06_01/: CMakeLists.txt  main.cpp
p06_02/: CMakeLists.txt  main.cpp
p06_03/: CMakeLists.txt  main.cpp
p06_04/: CMakeLists.txt  main.cpp
p06_05/: CMakeLists.txt  main.cpp
p06_06/: CMakeLists.txt  main.cpp
p06_07/: CMakeLists.txt  main.cpp
p06_08/: CMakeLists.txt  main.cpp
p07_01/: CMakeLists.txt  main.cpp
p07_02/: CMakeLists.txt  main.cpp
p07_03/: CMakeLists.txt  main.cpp
p07_04/: CMakeLists.txt  main.cpp
p07_05/: CMakeLists.txt  main.cpp
p07_06/: CMakeLists.txt  main.cpp
p07_07/: CMakeLists.txt  main.cpp
p07_08/: CMakeLists.txt  main.cpp
p07_09/: CMakeLists.txt  main.cpp
p07_10/: CMakeLists.txt  main.cpp
p07_11/: CMakeLists.txt  main.cpp
p08_01/: CMakeLists.txt  main.cpp
p08_02/: CMakeLists.txt  main.cpp
p08_03/: CMakeLists.txt  main.cpp
p08_04/: CMakeLists.txt  main.cpp
p08_05/: CMakeLists.txt  main.cpp
p08_06/: CMakeLists.txt  main.cpp
p08_07/: CMakeLists.txt  main.cpp
p09_01/: CMakeLists.txt  main.cpp
p09_02/: CMakeLists.txt  main.cpp
p09_03/: CMakeLists.txt  main.cpp
p09_04/: CMakeLists.txt  main.cpp
p09_05/: CMakeLists.txt  main.cpp
p09_06/: CMakeLists.txt  main.cpp
p10_01/: CMakeLists.txt  main.cpp
p10_02/: CMakeLists.txt  main.cpp
p10_03/: CMakeLists.txt  main.cpp
p10_04/: CMakeLists.txt  main.cpp
p10_05/: CMakeLists.txt  main.cpp
p10_06/: CMakeLists.txt  main.cpp
p10_07/: CMakeLists.txt  main.cpp
p10_08/: CMakeLists.txt  main.cpp
p11_01/: CMakeLists.txt  main.cpp
p11_02/: CMakeLists.txt  main.cpp
p11_03/: CMakeLists.txt  main.cpp
p11_04/: CMakeLists.txt  main.cpp
p11_05/: CMakeLists.txt  main.cpp
p12_01/: CMakeLists.txt  main.cpp
p12_02/: CMakeLists.txt  main.cpp
p12_03/: CMakeLists.txt  main.cpp
p12_04/: CMakeLists.txt  main.cpp
